--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --config webpack.prod.js",
     "demo": "webpack --config webpack.dev.js",
     "deploy": "gh-pages -d demo",
-    "eslint": "eslint . && cd server && eslint .",
+    "eslint": "eslint . ",
     "lint": "npm run eslint --fix",
     "live": "cross-env BABEL_ENV=production npm run start",
     "predeploy": "webpack --config webpack.dev.js --mode production",
