--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
     "babel-plugin-jsx-remove-data-test-id": "^2.1.3",
+    "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
